--- a/links.html
+++ b/links.html
@@ -80,12 +80,10 @@
 <audio id="music" controls>
   <source src="your-song.mp3" type="audio/mpeg">
 </audio>
-    <p class="hint">Edit these links in <code>links.html</code>.</p>
-  </main>
 
-  <footer class="footer">
-    <p>Add any special websites or playlists here.</p>
-  </footer>
+<div class="turntable">
+  <div class="record"></div>
+</div>
 
   <script src="js/script.js"></script>
 
@@ -94,18 +92,3 @@
 </html>
 
 
-<audio id="music" controls>
-  <source src="your-song.mp3" type="audio/mpeg">
-</audio>
-    <p class="hint">Edit these links in <code>links.html</code>.</p>
-  </main>
-
-  <footer class="footer">
-    <p>Add any special websites or playlists here.</p>
-  </footer>
-
-  <script src="js/script.js"></script>
-
-
-</body>
-</html>
