--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
     </section>
 
     <section class="preview">
-      <h2>Quick Peek</h2>
+     
       <div class="preview-cards">
         <a class="card" href="story.html">
           <img src="images/photo2.jpg" alt="memory" onerror="this.src='images/placeholder.jpg'">
-          <div class="card-text">Our Story — the little moments</div>
+          <div class="card-text">through time</div>
         </a>
         <a class="card" href="letter.html">
           <img src="images/photo3.jpg" alt="letter" onerror="this.src='images/placeholder.jpg'">
-          <div class="card-text">My Letter to You</div>
+          <div class="card-text">to my birthday girl,</div>
         </a>
         <a class="card" href="gallery.html">
           <img src="images/photo4.jpg" alt="gallery" onerror="this.src='images/placeholder.jpg'">
-          <div class="card-text">Photo Gallery</div>
+          <div class="card-text">memory lane</div>
         </a>
       </div>
     </section>
   </main>
 
   <footer class="footer">
-    <p>Made with ❤️ for Remi — edit everything in the `remi-scrapbook` folder. See README.txt for quick editing tips.</p>
+    <p>made with love :)</p>
   </footer>
 
   <script src="js/script.js"></script>
