--- a/photos.html
+++ b/photos.html
@@ -9,11 +9,11 @@
 </head>
 <body class="paper-bg">
   <header class="nav small">
-    <a class="brand" href="index.html"> ← return ☘︎ </a>
+    <a class="brand" href="main.html"> ← return ☘︎ </a>
   </header>
 
   <main class="container">
-    <h1 class="section-title">snapshots</h1>
+    <h1 class="section-title">a museum of you</h1>
 
     <div class="masonry">
       <img src="images/photo1.jpg" alt="1" onerror="this.src='images/placeholder.jpg'">
@@ -27,7 +27,7 @@
   </main>
 
   <footer class="footer">
-    <p>my pretty darlingg</p>
+    <p>my beautiful beloved, you take my breath away</p>
   </footer>
 
   <script src="js/script.js"></script>
