--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
       <h1 class="title">Happy Birthday, <span class="accent">Remi</span></h1>
       <p class="subtitle">
-        ★
+        ⸢This website is just for that one girl.⸥
       </p>
 
       <div class="cta-row">
-        <a class="btn" href="#" id="open-scrapbook">Open the Scrapbook</a>
+        <a class="btn" href="#" id="open-scrapbook"><br>open the scrapbook</a>
       </div>
     </section>
 
